<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="?attr/toolbarStyle"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/locationLoading"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/locationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="현재위치" />
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:tabGravity="fill"
        app:tabIndicatorFullWidth="false"
        app:tabMaxWidth="0dp"
        app:tabMode="auto"
        tools:visibility="visible" />

    <View
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:background="@color/gray_168"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabLayout" />

    <HorizontalScrollView
        android:id="@+id/filterScrollView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabLayout"
        tools:visibility="visible">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/filterChipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="12dp"
            app:checkedChip="@id/chipDefault"
            app:chipSpacingHorizontal="4dp"
            app:chipSpacingVertical="6dp"
            app:selectionRequired="true"
            app:singleLine="true"
            app:singleSelection="true"
            tools:visibility="visible">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipInitialize"
                style="@style/Widget.Part6chapter01.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/initialize"
                android:visibility="gone"
                app:chipIconEnabled="true" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipFastDelivery"
                style="@style/Widget.Part6chapter01.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fast_delivery"
                app:chipIconEnabled="true" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipLowDeliveryTip"
                style="@style/Widget.Part6chapter01.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/low_delivery_tip"
                app:chipIconEnabled="true" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipDefault"
                style="@style/Widget.Part6chapter01.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_order"
                app:chipIconEnabled="true" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipTopRate"
                style="@style/Widget.Part6chapter01.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top_rate"
                app:chipIconEnabled="true" />

        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filterScrollView"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/basketButtonContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/basketFloatingButton"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_margin="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_shopping_basket_24"
            android:backgroundTint="@color/white"
            android:elevation="16dp"
            app:layout_constraintBottom_toBottomOf="@id/basketFloatingButton"
            app:layout_constraintEnd_toEndOf="@id/basketFloatingButton"
            app:layout_constraintHorizontal_bias="0.3"
            app:layout_constraintStart_toStartOf="@id/basketFloatingButton"
            app:layout_constraintTop_toTopOf="@id/basketFloatingButton" />

        <TextView
            android:id="@+id/basketCountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="16dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/basketFloatingButton"
            app:layout_constraintEnd_toEndOf="@id/basketFloatingButton"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toStartOf="@id/basketFloatingButton"
            app:layout_constraintTop_toTopOf="@id/basketFloatingButton"
            tools:text="0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>